# betriebskostenabrechnung

./: Dockerfile  README.md  backend.py  heatmap.py  index.html  index.real.html  pyproject.toml
